--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,30 +39,46 @@
 
 /* Navbar styles */
 .main-nav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-.main-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  background-color: var(--neutral-700);
+  height: 96px;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 80px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: height 0.3s ease, padding 0.3s ease;
 }
 
-.main-nav li {
-
+.main-nav.scrolled {
+  height: 64px;
+  padding: 0 60px;
 }
 
-.main-nav li a {
+.main-nav .logo {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 30px;
+    color: var(--neutral-100);
+}
+
+.main-nav .nav-links {
+  display: flex;
+  gap: 36px;
+}
+
+.main-nav .nav-links a {
   display: block;
-  color: white;
+  color: var(--neutral-100);
   text-align: center;
-  padding: 14px 16px;
+  padding: 8px 24px;
   text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
-.main-nav li a:hover {
-  background-color: #111;
+.main-nav .nav-links a:hover {
+  color: var(--neutral-300);
 }
