--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,39 @@
-body {
+
+:root {
+  --neutral-900: #020407;
+  --neutral-700: #28292B;
+  --neutral-500: #727579;
+  --neutral-300: #BABEC4;
+  --neutral-100: #F5F5F5;
+  --background-card: #131313;
+  --background-container: rgba(2, 4, 7, 0.35);
+  --accent-purpleLight: rgba(138, 56, 245, 0.23);
+  --accent-purpleDark: rgba(138, 56, 245, 0.13);
+  --accent-blueLight: rgba(31, 30, 97, 0.36);
+  --accent-blueDark: rgba(31, 30, 97, 0.43);
+
+  --font-main: 'Readex Pro', sans-serif;
+
+  --radius-sm: 10px;
+  --radius-md: 20px;
+  --radius-pill: 30px;
+
+  --space-xxs: 4px;
+  --space-xs: 8px;
+  --space-sm: 12px;
+  --space-md: 16px;
+  --space-lg: 24px;
+  --space-xl: 40px;
+}
+
+body, button, input, select, textarea {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-main);
+  background: #020407;
+  color: var(--neutral-100);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
